# OncoTRAIL

./: .gitignore  README.md  env.sh.example  pyproject.toml
scripts/: anchor_note_to_treatment.sh  combine_note_embedding.sh  combine_prompt_results.sh  compute_stats.sh  generate_note_embedding.sh  generate_prompts.sh  main_ML_embedding.sh  prepare_data.sh  prompt_engineering.sh  pySLURMargs.py  sh_addNewTargetToEmbedding.sh  sh_checkMissingPromptingFile.sh  sh_genPrompts.sh  sh_getAttentionScores.sh  sh_main.sh  sh_main_deid.sh  sh_main_deid_keepNL.sh  sh_main_midfusion.sh  sh_main_strip.sh  sh_main_strip_prepend.sh  sh_main_test.sh  sh_main_test_test.sh  sh_mergeDataFrames.sh  sh_mergeDataFrames_deid_prompting.sh  sh_mergeDataFrames_prompting.sh  sh_mergeDataFrames_strip.sh  sh_mergeDataFrames_strip_prompting.sh  sh_mergeEmbedding.sh  sh_mergeEmbedding_deid.sh  sh_mergeEmbedding_deid_keepNL.sh  sh_mergeEmbedding_strip.sh  sh_mergeEmbedding_strip_prepend.sh  sh_preprocessing.sh  sh_preprocessing_deid.sh  sh_preprocessing_deid_keepNL.sh  sh_preprocessing_strip.sh  sh_preprocessing_strip_prepend.sh  sh_processDataFramePromptingVariation.sh  sh_processPromptEngineering.sh  sh_processPrompting.sh  (+10 more)
scripts/debug/: sh_testNLmodel.sh
src/: __init__.py  addNewTargetToEmbedding.py  addTabularDataToNote.py  checkMissingPromptingFile.py  config.py  constants.py  genPrompts.py  generate_prompts.py  getAttentionScores.py  main.py  mergeDataFrames.py  mergeEmbedding.py  models.py  preprocessing.py  processDataFramePromptingVariation.py  processPromptEngineering.py  processPromptEngineeringMultiTargets.py  processPrompting.py  processPromptingForPatientSex.py  processPromptingVariation.py  split.py  splitDataFrame.py  stripNewLine.py  testNLmodel.py  tokenizeNotes.py  tokenizePatientNoteHistory.py  train.py  util.py
src/EDA/: physician_effect.py  (+2 more)
(+101 files in other folders)
